--- a/src/report3/crossingsTab.tex
+++ b/src/report3/crossingsTab.tex
@@ -1,15 +1,15 @@
 % latex table generated in R 3.0.2 by xtable 1.7-4 package
-% Sat Nov 21 12:12:19 2015
-\begin{tabular}{lrrrrr}
-  \toprule  & var & avg & sd & min & min\_run \\ 
-  \midrule automatic-1.txt & 1.51 & 9.42 & 1.23 & 9 & 2 \\ 
-  automatic-2.txt & 35.90 & 41.68 & 5.99 & 36 & 0 \\ 
-  automatic-3.txt & 20.88 & 67.53 & 4.57 & 59 & 10 \\ 
-  automatic-4.txt & 234.26 & 97.05 & 15.31 & 84 & 0 \\ 
-  automatic-5.txt & 0.95 & 40.68 & 0.98 & 39 & 0 \\ 
-  automatic-6.txt & 0.00 & 6,153,059.00 & 0.00 & 6,153,059 & 0 \\ 
-  automatic-7.txt & 714,058.88 & 136,518.53 & 845.02 & 135,111 & 1 \\ 
-  automatic-8.txt & 581,888.04 & 541,495.47 & 762.82 & 539,317 & 11 \\ 
-  automatic-9.txt & 687,002.37 & 1,266,526.95 & 828.86 & 1,265,326 & 7 \\ 
-  automatic-10.txt & 24,946.19 & 55,289.26 & 157.94 & 55,035 & 16 \\ 
+% Sat Nov 21 16:37:50 2015
+\begin{tabular}{lrrrr}
+  \toprule  & var & avg & sd & min \\ 
+  \midrule automatic-1.txt & 1.51 & 9.42 & 1.23 & 9 \\ 
+  automatic-2.txt & 35.90 & 41.68 & 5.99 & 36 \\ 
+  automatic-3.txt & 20.88 & 67.53 & 4.57 & 59 \\ 
+  automatic-4.txt & 234.26 & 97.05 & 15.31 & 84 \\ 
+  automatic-5.txt & 0.95 & 40.68 & 0.98 & 39 \\ 
+  automatic-6.txt & 0.00 & 6,153,059.00 & 0.00 & 6,153,059 \\ 
+  automatic-7.txt & 714,058.88 & 136,518.53 & 845.02 & 135,111 \\ 
+  automatic-8.txt & 581,888.04 & 541,495.47 & 762.82 & 539,317 \\ 
+  automatic-9.txt & 687,002.37 & 1,266,526.95 & 828.86 & 1,265,326 \\ 
+  automatic-10.txt & 24,946.19 & 55,289.26 & 157.94 & 55,035 \\ 
    \bottomrule \end{tabular}
