--- a/src/report3/timeTab.tex
+++ b/src/report3/timeTab.tex
@@ -1,15 +1,15 @@
 % latex table generated in R 3.0.2 by xtable 1.7-4 package
-% Sat Nov 21 12:27:58 2015
-\begin{tabular}{lrrrrr}
-  \toprule  & var & avg & sd & min & min\_run \\ 
-  \midrule automatic-1.txt & 0.00 & 0.03 & 0.00 & 0 & 1 \\ 
-  automatic-2.txt & 0.00 & 0.02 & 0.01 & 0 & 10 \\ 
-  automatic-3.txt & 0.05 & 0.61 & 0.22 & 0 & 5 \\ 
-  automatic-4.txt & 0.00 & 0.08 & 0.01 & 0 & 11 \\ 
-  automatic-5.txt & 0.00 & 0.06 & 0.01 & 0 & 4 \\ 
-  automatic-6.txt & 0.26 & 309.22 & 0.51 & 309 & 13 \\ 
-  automatic-7.txt & 712.56 & 277.61 & 26.69 & 228 & 9 \\ 
-  automatic-8.txt & 0.01 & 302.82 & 0.09 & 303 & 16 \\ 
-  automatic-9.txt & 0.00 & 303.16 & 0.06 & 303 & 0 \\ 
-  automatic-10.txt & 0.00 & 302.35 & 0.04 & 302 & 7 \\ 
+% Sat Nov 21 16:37:51 2015
+\begin{tabular}{lrrrr}
+  \toprule  & var & avg & sd & min \\ 
+  \midrule automatic-1.txt & 0.00 & 0.03 & 0.00 & 0 \\ 
+  automatic-2.txt & 0.00 & 0.02 & 0.01 & 0 \\ 
+  automatic-3.txt & 0.05 & 0.61 & 0.22 & 0 \\ 
+  automatic-4.txt & 0.00 & 0.08 & 0.01 & 0 \\ 
+  automatic-5.txt & 0.00 & 0.06 & 0.01 & 0 \\ 
+  automatic-6.txt & 0.26 & 309.22 & 0.51 & 309 \\ 
+  automatic-7.txt & 712.56 & 277.61 & 26.69 & 228 \\ 
+  automatic-8.txt & 0.01 & 302.82 & 0.09 & 303 \\ 
+  automatic-9.txt & 0.00 & 303.16 & 0.06 & 303 \\ 
+  automatic-10.txt & 0.00 & 302.35 & 0.04 & 302 \\ 
    \bottomrule \end{tabular}
