--- a/src/report3/crossingsTab-stoch-order.tex
+++ b/src/report3/crossingsTab-stoch-order.tex
@@ -1,15 +1,15 @@
 % latex table generated in R 3.0.2 by xtable 1.7-4 package
-% Sat Nov 21 12:14:55 2015
-\begin{tabular}{lrrrrr}
-  \toprule  & var & avg & sd & min & min\_run \\ 
-  \midrule automatic-1.txt & 2.53 & 9.68 & 1.59 & 9 & 3 \\ 
-  automatic-2.txt & 41.53 & 39.21 & 6.44 & 25 & 12 \\ 
-  automatic-3.txt & 39.41 & 64.53 & 6.28 & 50 & 14 \\ 
-  automatic-4.txt & 13.62 & 127.53 & 3.69 & 112 & 7 \\ 
-  automatic-5.txt & 107.82 & 45.84 & 10.38 & 30 & 18 \\ 
-  automatic-6.txt & 0.00 & 6,153,059.00 & 0.00 & 6,153,059 & 0 \\ 
-  automatic-7.txt & 1,033,834.45 & 136,568.16 & 1,016.78 & 134,450 & 11 \\ 
-  automatic-8.txt & 0.00 & 541,969.00 & 0.00 & 541,969 & 0 \\ 
-  automatic-9.txt & 1,096,844.32 & 1,267,338.32 & 1,047.30 & 1,265,185 & 18 \\ 
-  automatic-10.txt & 76,894.93 & 55,855.74 & 277.30 & 55,425 & 5 \\ 
+% Sat Nov 21 16:37:50 2015
+\begin{tabular}{lrrrr}
+  \toprule  & var & avg & sd & min \\ 
+  \midrule automatic-1.txt & 2.53 & 9.68 & 1.59 & 9 \\ 
+  automatic-2.txt & 41.53 & 39.21 & 6.44 & 25 \\ 
+  automatic-3.txt & 39.41 & 64.53 & 6.28 & 50 \\ 
+  automatic-4.txt & 13.62 & 127.53 & 3.69 & 112 \\ 
+  automatic-5.txt & 107.82 & 45.84 & 10.38 & 30 \\ 
+  automatic-6.txt & 0.00 & 6,153,059.00 & 0.00 & 6,153,059 \\ 
+  automatic-7.txt & 1,033,834.45 & 136,568.16 & 1,016.78 & 134,450 \\ 
+  automatic-8.txt & 0.00 & 541,969.00 & 0.00 & 541,969 \\ 
+  automatic-9.txt & 1,096,844.32 & 1,267,338.32 & 1,047.30 & 1,265,185 \\ 
+  automatic-10.txt & 76,894.93 & 55,855.74 & 277.30 & 55,425 \\ 
    \bottomrule \end{tabular}
