--- a/src/report3/timeTab-det-order.tex
+++ b/src/report3/timeTab-det-order.tex
@@ -1,15 +1,15 @@
 % latex table generated in R 3.0.2 by xtable 1.7-4 package
-% Sat Nov 21 12:27:58 2015
-\begin{tabular}{lrrrrr}
-  \toprule  & var & avg & sd & min & min\_run \\ 
-  \midrule automatic-1.txt & 0.00 & 0.01 & 0.00 & 0 & 2 \\ 
-  automatic-2.txt & 0.00 & 0.04 & 0.01 & 0 & 16 \\ 
-  automatic-3.txt & 0.12 & 0.74 & 0.35 & 0 & 13 \\ 
-  automatic-4.txt & 0.00 & 0.06 & 0.02 & 0 & 7 \\ 
-  automatic-5.txt & 0.00 & 0.08 & 0.01 & 0 & 4 \\ 
-  automatic-6.txt & 0.90 & 309.33 & 0.95 & 309 & 16 \\ 
-  automatic-7.txt & 0.00 & 301.15 & 0.01 & 301 & 0 \\ 
-  automatic-8.txt & 0.00 & 302.81 & 0.02 & 303 & 6 \\ 
-  automatic-9.txt & 0.06 & 303.22 & 0.24 & 303 & 16 \\ 
-  automatic-10.txt & 0.00 & 302.34 & 0.02 & 302 & 18 \\ 
+% Sat Nov 21 16:37:51 2015
+\begin{tabular}{lrrrr}
+  \toprule  & var & avg & sd & min \\ 
+  \midrule automatic-1.txt & 0.00 & 0.01 & 0.00 & 0 \\ 
+  automatic-2.txt & 0.00 & 0.04 & 0.01 & 0 \\ 
+  automatic-3.txt & 0.12 & 0.74 & 0.35 & 0 \\ 
+  automatic-4.txt & 0.00 & 0.06 & 0.02 & 0 \\ 
+  automatic-5.txt & 0.00 & 0.08 & 0.01 & 0 \\ 
+  automatic-6.txt & 0.90 & 309.33 & 0.95 & 309 \\ 
+  automatic-7.txt & 0.00 & 301.15 & 0.01 & 301 \\ 
+  automatic-8.txt & 0.00 & 302.81 & 0.02 & 303 \\ 
+  automatic-9.txt & 0.06 & 303.22 & 0.24 & 303 \\ 
+  automatic-10.txt & 0.00 & 302.34 & 0.02 & 302 \\ 
    \bottomrule \end{tabular}
