added main results table. needs to be filled with some numbers

--- a/src/report4/report4.tex
+++ b/src/report4/report4.tex
@@ -206,6 +206,29 @@ number of ants (and/or better local information) to find meaningful
 solutions.
 
 
+\begin{table}[!H]
+\scriptsize
+\centering
+\begin{tabular}{llllll}
+\toprule
+Instance & Avg Crossings & Min Crossings & Std Crossings & Avg Run-Time & Std Run-Time \\
+\midrule
+\texttt{auto-1} & & & & & \\
+\texttt{auto-2} & & & & & \\
+\texttt{auto-3} & & & & & \\
+\texttt{auto-4} & & & & & \\
+\texttt{auto-5} & & & & & \\
+\texttt{auto-6} & & & & & \\
+\texttt{auto-7} & & & & & \\
+\texttt{auto-8} & & & & & \\
+\texttt{auto-9} & & & & & \\
+\texttt{auto-10} & & & & & \\
+\bottomrule
+
+\end{tabular}
+
+\end{table}
+
 \clearpage
 
 
